Replace hex conversion functions with local methods and Base64 conversion using java.util.Base64 to remove the JAXB dependency and make JAva upgrades and compatability easier.